# Kiseki

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
Apps/: CMakeLists.txt
Apps/coupled-contact-flow/: main.cc
Apps/cube-drop/: main.cc
Apps/der-hair/: main.cc
Apps/energy-check/: main.cc
Apps/fem-showcase/: main.cc
Apps/fluid-sim/: main.cc
Apps/gpu-fem/: main.cc
Apps/ipc-fem/: main.cc
Apps/mesh-collider/: main.cc
Apps/multi-body/: main.cc
Apps/prescribed-motion/: main.cc
Apps/vk-triangle/: main.cc
Deform/: CMakeLists.txt
Deform/include/Deform/: deformation-gradient.h  invariants.h  strain-energy-density-factory.h  strain-energy-density.h  types.h
Deform/src/: strain-energy-density-factory.cc  strain-energy-density.cc
Deform/tests/: deform-gradient-test.cc
Engine/Contact/: CMakeLists.txt
Engine/Contact/src/: contact-barrier.cc
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/src/: contact-barrier-energy.cc  contact-detection-backends.h  contact-detection-impl.h  contact-detection.cc  contact-detector.cc  contact-potential.cc  dof-layout.cc  geometry-transfer.cc  global-geometry-manager.cc  global-solver.cc  runtime-scene.cc  runtime-simulation.cc  simulation-context.cc  subsystem-backend.cc
Engine/Runtime/tests/: contact-detection-test.cc  contact-potential-test.cc  geometry-table-test.cc  geometry-transfer-test.cc  runtime-element-test.cc  runtime-layout-test.cc
Engine/Scene/: CMakeLists.txt
Engine/SceneObjects/: CMakeLists.txt
Engine/SceneObjects/src/: hair.cc  tet-mesh.cc
Engine/Subsystems/DER/: CMakeLists.txt
Engine/Subsystems/FEM/: CMakeLists.txt
FEM/: CMakeLists.txt
FEM/benchmarks/: bench-newton-step.cc  bench-spd-projector.cc
FEM/include/fem/: boundary-conditions.h  colliders.h  constraints.h  external-force.h  fem-backend.h  fem-simulation.h  geometry-manager.h  integrator-factory.h  integrator.h  primitive.h  scene-proxy.h  simplex.h  system.h  trajectories.h  types.h
FEM/shaders/: activation-ee-classify.hlsl  activation-scatter.hlsl  activation-vt-classify.hlsl  barrier-assemble.hlsl  bcoo-flag.hlsl  bcoo-gather.hlsl  bcoo-iota.hlsl  bcoo-segstart.hlsl  broadphase-ee-count.hlsl  broadphase-ee-write.hlsl  broadphase-vt-count.hlsl  broadphase-vt-write.hlsl  bvh-traverse.hlsli  ccd-ee.hlsl  ccd-vt.hlsl  elastic-gradient.hlsl  elastic-hessian.hlsl  energy-barrier.hlsl  energy-elastic.hlsl  grad-gather.hlsl  grad-reduce.hlsl  jacobi-eigen.hlsli  lbvh-bound-block.hlsl  lbvh-bound-final.hlsl  lbvh-internal.hlsl  lbvh-leaves.hlsl  lbvh-morton.hlsl  lbvh-refit.hlsl  mass-apply.hlsl  pcg-axpy.hlsl  pcg-dot.hlsl  pcg-jacobi-apply-dot.hlsl  pcg-jacobi-setup.hlsl  pcg-reduce-final.hlsl  pcg-scalar-div.hlsl  pcg-spmv.hlsl  pcg-xpby.hlsl  spd-project-9x9.hlsl  traj-bound.hlsl  vec-abs.hlsl  (+2 more)
FEM/src/: constraints.cc  geometry-manager.cc  integrator-factory.cc  integrator.cc  system.cc
FEM/src/cpu/: cpu-fem-backend.cc
FEM/src/gpu/: gpu-activation.cc  gpu-barrier-assembler.cc  gpu-bcoo-sorter.cc  gpu-block-pcg-solver.cc  gpu-broad-phase.cc  gpu-ccd.cc  gpu-elastic-gradient.cc  gpu-elastic-hessian.cc  gpu-energy.cc  gpu-fem-backend.cc  gpu-gradient-reduce.cc  gpu-lbvh.cc  gpu-spd-projector.cc  gpu-trajectory-bounds.cc
FEM/src/ipc/: collision-detector.cc  collision-pair.cc  constraint.cc  distances.cc  implicit-euler.cc  integrator.cc
FEM/src/primitives/: elastic-tet-mesh.cc  tet-mesh.cc
FEM/tests/: deserializer-test.cc  sim-build-test.cc  test-constraints.cc  test-ee-mollifier.cc  test-gipc-barrier.cc  test-gpu-activation.cc  test-gpu-barrier.cc  test-gpu-bcoo-sorter.cc  test-gpu-broad-phase.cc  test-gpu-ccd.cc  test-gpu-elastic-gradient.cc  test-gpu-elastic-hessian.cc  test-gpu-energy.cc  test-gpu-fem-backend.cc  test-gpu-fem-pipeline.cc  test-gpu-gradient-reduce.cc  test-gpu-lbvh.cc  test-gpu-pcg.cc  test-gpu-spd-projector.cc  test-gpu-trajectory-lbvh.cc  test-kinematic.cc  test-phase2-activation.cc  test-phase3-unified-barrier.cc  test-prescribed.cc
FluidSim/: CMakeLists.txt
FluidSim/include/FluidSim/: field-tags.h  fluid-backend.h  fluid-context.h  fluid-legacy.h  fluid-simulator.h  (+5 more)
FluidSim/shaders/: advect.hlsl  body-force.hlsl  build-particle-cell-ranges.hlsl  build-particle-hash.hlsl  build-system.hlsl  build-weights.hlsl  cfl-reduce-final.hlsl  cfl-reduce.hlsl  cg-dot-product.hlsl  cg-jacobi.hlsl  cg-reduce-final.hlsl  cg-saxpy.hlsl  cg-scalar-div.hlsl  cg-spmv.hlsl  cg-update-s.hlsl  collider.hlsl  dirichlet.hlsl  extrapolate.hlsl  fluid-common.hlsl  g2p-gather.hlsl  jacobi.hlsl  marching-cubes-tables.hlsli  marching-cubes.hlsl  p2g-normalize.hlsl  p2g-scatter.hlsl  project.hlsl  reconstruct-sdf-hashed.hlsl  reconstruct-sdf.hlsl  smooth-sdf.hlsl
FluidSim/src/: fluid-context.cc  fluid-simulator.cc  presets.cc
HairSim/: CMakeLists.txt
HairSim/apps/: hair-sim-app.cc
HairSim/src/: bending-energy.cc  implicit-integrator.cc  rod-energy-geometry.h  rod.cc  stretching-energy.cc  twisting-energy.cc
HairSim/tests/: test-band-matrix.cc  test-twisting-energy.cc
RPK/: CMakeLists.txt
RPK/shaders/: radix-histogram.hlsl  radix-scatter-keys.hlsl  radix-scatter.hlsl  reduce-final.hlsl  reduce.hlsl  rpk-common.hlsl  scan-local.hlsl  scan-propagate.hlsl
RPK/src/: reduce.cc  scan.cc  sort.cc
RPK/tests/: test-perf.cc  test-reduce.cc  test-scan.cc  test-sort.cc
Renderer/: CMakeLists.txt
Renderer/src/: gl-render-backend.cc  gl-render-backend.h  gl-renderer.cc  gl-renderer.h  interactive-renderer.cc  interactive-renderer.h  render-backend-factory.cc  render-backend-factory.h  render-backend.h
Runtime/: CMakeLists.txt
Runtime/src/: geometry-table.cc  runtime-scene.cc
Runtime/tests/: geometry-table-test.cc
python/: CMakeLists.txt  README.md
python/examples/: bunny_bounce.py  cantilever_beam.py  cube_drop.py  energy_conservation.py  multi_body.py  prescribed_motion.py  rotating_obstacle.py  squeeze.py  twist.py
python/scripts/: normalize_mesh.py
python/src/: bind_der.cc  bind_mesh.cc  bind_renderer.cc  bind_simulation.cc  bindings.h  module.cc
python/tests/: test_import.py
(+324 files in other folders)
