project(Deform LANGUAGES CXX)
file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cc src/*.cpp include/*.h)
add_library(Deform STATIC ${srcs})
add_library(Kiseki::Deform ALIAS Deform)
target_link_libraries(Deform PUBLIC Kiseki::Maths)
target_include_directories(Deform PUBLIC include)
add_executable(deform-explore apps/deform-explore.cc)
target_link_libraries(deform-explore PUBLIC Kiseki::Deform)

file(GLOB TESTS tests/*.cc)
foreach (test ${TESTS})
    get_filename_component(test_name ${test} NAME_WE)
    add_executable(${test_name} ${test})
    target_link_libraries(${test_name} PUBLIC Kiseki::Deform gtest gtest_main)
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach ()
