project(Runtime LANGUAGES CXX)

file (GLOB_RECURSE RUNTIME_SOURCES CONFIGURE_DEPENDS src/*.cc)
file (GLOB_RECURSE RUNTIME_HEADERS CONFIGURE_DEPENDS include/Runtime/*.h)
add_library(Runtime STATIC ${RUNTIME_SOURCES} ${RUNTIME_HEADERS})
add_library(Kiseki::Runtime ALIAS Runtime)
target_include_directories(Runtime PUBLIC include)
target_link_libraries(Runtime PUBLIC Kiseki::Core Kiseki::RHI Kiseki::Spatify Kiseki::Maths Kiseki::EngineContactIPC Eigen3::Eigen)
target_compile_features(Runtime PUBLIC cxx_std_20)

enable_testing()
file(GLOB_RECURSE test_srcs CONFIGURE_DEPENDS tests/*.cc)
foreach(test_src ${test_srcs})
    get_filename_component(test_name ${test_src} NAME_WE)
    add_executable(${test_name} ${test_src})
    target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/Engine/Scene/include)
    target_link_libraries(${test_name} PUBLIC Kiseki::Runtime GTest::gtest GTest::gtest_main)
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()
